fixed pointer alignment

--- a/style.sass
+++ b/style.sass
@@ -162,6 +162,7 @@ footer
 		border-bottom-color: red
 		bottom: 0px
 		left: 50%
+		margin-left: -5px
 		position: absolute
 		z-index: 999
 	.times
